# swagger.yml
@@ -109,6 +109,31 @@ paths:
           description: плохой запрос
         500:
           description: неизвестная ошибка
+  /users  /{id}:
+    get:
+      operationId: getUser
+      parameters:
+        - name: id
+          in: path
+          type: string
+          required: true
+      responses:
+        200:
+          description: dddd
+    post:
+      operationId: updateUser
+      parameters:
+        - name: id
+          in: path
+          type: string
+          required: true
+        - name: body
+          in: body
+          schema:
+            $ref: "#/definitions/userDesc"
+      responses:
+        200:
+          description: dddd
 definitions:
   userDesc:
     properties:
